--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -14,6 +14,7 @@
     "\n",
     "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
     "\n",
+    "### Licens\n",
     "Licensen på datat är väldigt otydlig från SKR skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia/Wikidata  \n",
     "* [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)   \n",
     "* [Wikipedia:Att återanvända material från Wikipedia](https://sv.wikipedia.org/wiki/Wikipedia:Att_%C3%A5teranv%C3%A4nda_material_fr%C3%A5n_Wikipedia)\n",
@@ -28,7 +29,29 @@
     "\n",
     "_\"När vi lade ut de här dataseten för några år sedan så var det vårt pilotprojekt_\n",
     "_med öppna data. Tyvärr så kom vi aldrig så långt i organisationen att vi lyckades få till stånd\n",
-    "att sätta licens på dataseten.\"_"
+    "att sätta licens på dataseten.\"_ \n",
+    "\n",
+    "### Skördning europeandataportal  \n",
+    "Datat i dataportalen.se skickas till Europeandataportalen. De identifierade nyckel orden/ beskrivningen skickas som literals med språktag. Korrekt vore att använda *samma som* och [Länkade data](https://sv.wikipedia.org/wiki/L%C3%A4nkade_data) så att kunskapsgrafer med kopplingar mellan dataseten kan göras... jmf. citation graphs för vetenskapliga publikationer\n",
+    "\n",
+    "se exempel [https://www.europeandataportal.eu/data/api/datasets/https-catalog-skl-se-store-1-resource-50.rdf?useNormalizedId=true&locale=sv rdf] \n",
+    "```\n",
+    "<j.4:keyword xml:lang=\"sv\">Kommunkod</j.4:keyword>\n",
+    "<j.1:accrualPeriodicity rdf:resource=\"http://publications.europa.eu/resource/authority/frequency/ANNUAL\"/>\n",
+    "<j.4:distribution>\n",
+    "<j.4:Distribution rdf:about=\"https://europeandataportal.eu/set/distribution/6891b262-bac8-4ea8-a1fe-fc578b9d3b5f\">\n",
+    "<j.1:identifier>https://catalog.skl.se/store/1/resource/166</j.1:identifier>\n",
+    "<j.2:status rdf:resource=\"http://purl.org/adms/status/Completed\"/>\n",
+    "<j.1:description xml:lang=\"sv\">Kommunkod, kommun och befolkning.</j.1:description>\n",
+    "<j.1:title xml:lang=\"sv\">Kommunkoder_csv</j.1:title>\n",
+    "<j.1:format>text/csv</j.1:format>\n",
+    "<j.4:downloadURL rdf:resource=\"https://catalog.skl.se/store/1/resource/165\"/>\n",
+    "<j.4:accessURL rdf:resource=\"https://catalog.skl.se/store/1/resource/165\"/>\n",
+    "<j.1:language rdf:resource=\"http://publications.europa.eu/resource/authority/language/SWE\"/>\n",
+    "<j.1:modified rdf:datatype=\"http://www.w3.org/2001/XMLSchema#date\">2019-04-11T10:46:50+02:00</j.1:modified>\n",
+    "</j.4:Distribution>\n",
+    "</j.4:distribution>\n",
+    "```"
    ]
   },
   {
