--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -31,10 +31,16 @@
     "_med öppna data. Tyvärr så kom vi aldrig så långt i organisationen att vi lyckades få till stånd\n",
     "att sätta licens på dataseten.\"_ \n",
     "\n",
-    "### Skördning europeandataportal  \n",
-    "Datat i dataportalen.se skickas till Europeandataportalen. De identifierade nyckel orden/ beskrivningen skickas som literals med språktag. Korrekt vore att använda *samma som* och [Länkade data](https://sv.wikipedia.org/wiki/L%C3%A4nkade_data) så att kunskapsgrafer med kopplingar mellan dataseten kan göras... jmf. citation graphs för vetenskapliga publikationer\n",
+    "### Skördning europeandataportal  som literals bör vara linked data\n",
+    "Datat i dataportalen.se skickas till Europeandataportalen.   \n",
     "\n",
-    "se exempel [https://www.europeandataportal.eu/data/api/datasets/https-catalog-skl-se-store-1-resource-50.rdf?useNormalizedId=true&locale=sv rdf] \n",
+    "Det antipattern jag ser är att saker skickas som literals med språktag. Korrekt vore att använda *samma som* och [Länkade data](https://sv.wikipedia.org/wiki/L%C3%A4nkade_data) så att kunskapsgrafer med kopplingar mellan dataseten kan göras... jmf. [citation graphs](https://minancestry.blogspot.com/2020/06/kunskapsdatabaser-for-slaktforskning.html#citationgraph) för vetenskapliga publikationer\n",
+    "\n",
+    "se exempel [rdf](https://www.europeandataportal.eu/data/api/datasets/https-catalog-skl-se-store-1-resource-50.rdf?useNormalizedId=true&locale=sv) extrakt nedan att \n",
+    "* Kommunkod beskrivs som \n",
+    "** lang=\"sv\" kommunkod \n",
+    "** korrekt vore samma som [WD:Q23003](https://www.wikidata.org/wiki/Q23003) där beskriving [finns på 23 språk vad kommunkod är](https://www.wikidata.org/wiki/Q23003#sitelinks-wikipedia]\n",
+    "\n",
     "```\n",
     "<j.4:keyword xml:lang=\"sv\">Kommunkod</j.4:keyword>\n",
     "<j.1:accrualPeriodicity rdf:resource=\"http://publications.europa.eu/resource/authority/frequency/ANNUAL\"/>\n",
