--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -39,7 +39,7 @@
     "se exempel [rdf](https://www.europeandataportal.eu/data/api/datasets/https-catalog-skl-se-store-1-resource-50.rdf?useNormalizedId=true&locale=sv) extrakt nedan att \n",
     "* Kommunkod beskrivs som \n",
     "** lang=\"sv\" kommunkod \n",
-    "** korrekt vore samma som [WD:Q23003](https://www.wikidata.org/wiki/Q23003) där beskriving [finns på 23 språk vad kommunkod är](https://www.wikidata.org/wiki/Q23003#sitelinks-wikipedia]\n",
+    "** korrekt vore samma som [WD:Q23003](https://www.wikidata.org/wiki/Q23003) där beskriving [finns på 23 språk vad kommunkod är](https://www.wikidata.org/wiki/Q23003#sitelinks-wikipedia)\n",
     "\n",
     "```\n",
     "<j.4:keyword xml:lang=\"sv\">Kommunkod</j.4:keyword>\n",
