--- a/SKL data.ipynb
+++ b/SKL data.ipynb
@@ -13,24 +13,7 @@
     "Test accessa SKL / SKR Öppen data från [catalog.skl.se](https://catalog.skl.se/rowstore/dataset/03c90666-e53c-49af-bde1-8336fc59dff6/html) / [dataportal.se](https://www.dataportal.se) / [europeandataportal](https://www.europeandataportal.eu) för att skapa bättre data i Wikidata för kommuner se [karta](https://w.wiki/V4o) med data vi har idag  \n",
     "\n",
     "* denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/SKL%20data.ipynb) \n",
-    "\n",
-    "### Licens\n",
-    "Licensen på datat är väldigt otydlig från SKR skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia/Wikidata  \n",
-    "* [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)   \n",
-    "* [Wikipedia:Att återanvända material från Wikipedia](https://sv.wikipedia.org/wiki/Wikipedia:Att_%C3%A5teranv%C3%A4nda_material_fr%C3%A5n_Wikipedia)\n",
-    "* video [Creative Commons licences explained](https://www.youtube.com/watch?v=AeTlXtEOplA)  \n",
-    "\n",
-    "Det enda om licens på SKR datat jag hittat var\n",
-    "* [www.europeandataportal.eu](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-50?locale=sv) där det står \"Licens ej angiven\"  \n",
-    "* [www.dataportalen.se](https://www.dataportal.se/sv/datasets/653_26835/kommunkoder) står inget endast \"Åtkomsträttigheter Publik\"  \n",
     " \n",
-    " \n",
-    "SVAR SKR ingen licens skapad och Öppen data verkar inte vara prioriterat... \n",
-    "\n",
-    "_\"När vi lade ut de här dataseten för några år sedan så var det vårt pilotprojekt_\n",
-    "_med öppna data. Tyvärr så kom vi aldrig så långt i organisationen att vi lyckades få till stånd\n",
-    "att sätta licens på dataseten.\"_ \n",
-    "\n",
     "### Skördning europeandataportal  som literals bör vara linked data\n",
     "Datat i dataportalen.se skickas till Europeandataportalen.   \n",
     "\n",
@@ -57,7 +40,24 @@
     "<j.1:modified rdf:datatype=\"http://www.w3.org/2001/XMLSchema#date\">2019-04-11T10:46:50+02:00</j.1:modified>\n",
     "</j.4:Distribution>\n",
     "</j.4:distribution>\n",
-    "```"
+    "``` \n",
+    "\n",
+    "### Licens\n",
+    "Licensen på datat är väldigt otydlig från SKR skickat email 2020-06-24 SKR vad som gäller och om det är [CC-0](https://creativecommons.org/share-your-work/public-domain/cc0/) se krav för att kunna vara del av Wikipedia/Wikidata  \n",
+    "* [Wikidata:Licensing](https://www.wikidata.org/wiki/Wikidata:Licensing)   \n",
+    "* [Wikipedia:Att återanvända material från Wikipedia](https://sv.wikipedia.org/wiki/Wikipedia:Att_%C3%A5teranv%C3%A4nda_material_fr%C3%A5n_Wikipedia)\n",
+    "* video [Creative Commons licences explained](https://www.youtube.com/watch?v=AeTlXtEOplA)  \n",
+    "\n",
+    "Det enda om licens på SKR datat jag hittat var\n",
+    "* [www.europeandataportal.eu](https://www.europeandataportal.eu/data/datasets/https-catalog-skl-se-store-1-resource-50?locale=sv) där det står \"Licens ej angiven\"  \n",
+    "* [www.dataportalen.se](https://www.dataportal.se/sv/datasets/653_26835/kommunkoder) står inget endast \"Åtkomsträttigheter Publik\"  \n",
+    " \n",
+    " \n",
+    "SVAR SKR ingen licens skapad och Öppen data verkar inte vara prioriterat... \n",
+    "\n",
+    "_\"När vi lade ut de här dataseten för några år sedan så var det vårt pilotprojekt_\n",
+    "_med öppna data. Tyvärr så kom vi aldrig så långt i organisationen att vi lyckades få till stånd\n",
+    "att sätta licens på dataseten.\"_ \n"
    ]
   },
   {
