--- a/Riksdagens dokument KU-anmälningar.ipynb
+++ b/Riksdagens dokument KU-anmälningar.ipynb
@@ -1,8 +1,141 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Riksdagens dokument KU-anmälningar\n",
+    "\n",
+    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20KU-anm%C3%A4lningar.ipynb) \n",
+    "  * [SFS](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20SFS.ipynb)\n",
+    "  * [Motioner]()\n",
+    "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)  561 träffar\n",
+    "* [Dokumenttyper](http://data.riksdagen.se/sv/koder/?typ=doktyp&utformat=json)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'dokument'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-574030fa2336>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhttp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GET'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mdftot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdftot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dokumentlista\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"dokument\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mdftot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'dokument'"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib3, json\n",
+    "import pandas as pd \n",
+    "http = urllib3.PoolManager() \n",
+    "pd.set_option(\"display.max.columns\", None) \n",
+    "urlbase =\"http://data.riksdagen.se/dokumentlista/?sok=&doktyp=ku-anm&utformat=json&start=\"\n",
+    "\n",
+    "dftot = pd.DataFrame()\n",
+    "for i in range(1,11813):\n",
+    "    url = urlbase + str(i)\n",
+    "    if ((i-1) % 10) == 0:\n",
+    "       print('*', end='', flush=True)\n",
+    "    r = http.request('GET', url)\n",
+    "    data = json.loads(r.data)\n",
+    "    dftot = dftot.append(pd.DataFrame(data[\"dokumentlista\"][\"dokument\"]),sort=False)\n",
+    "dftot.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 561 entries, 0 to 0\n",
+      "Data columns (total 57 columns):\n",
+      "traff                561 non-null object\n",
+      "domain               561 non-null object\n",
+      "database             561 non-null object\n",
+      "datum                561 non-null object\n",
+      "id                   561 non-null object\n",
+      "rdrest               0 non-null object\n",
+      "slutdatum            0 non-null object\n",
+      "rddata               0 non-null object\n",
+      "plats                0 non-null object\n",
+      "klockslag            0 non-null object\n",
+      "publicerad           561 non-null object\n",
+      "systemdatum          561 non-null object\n",
+      "undertitel           559 non-null object\n",
+      "kalla                560 non-null object\n",
+      "kall_id              0 non-null object\n",
+      "dok_id               561 non-null object\n",
+      "dokumentformat       0 non-null object\n",
+      "dokument_url_text    561 non-null object\n",
+      "dokument_url_html    561 non-null object\n",
+      "inlamnad             0 non-null object\n",
+      "motionstid           0 non-null object\n",
+      "tilldelat            0 non-null object\n",
+      "lang                 0 non-null object\n",
+      "url                  0 non-null object\n",
+      "relurl               0 non-null object\n",
+      "titel                561 non-null object\n",
+      "rm                   561 non-null object\n",
+      "organ                561 non-null object\n",
+      "relaterat_id         0 non-null object\n",
+      "doktyp               561 non-null object\n",
+      "typ                  561 non-null object\n",
+      "subtyp               561 non-null object\n",
+      "beteckning           0 non-null object\n",
+      "tempbeteckning       561 non-null object\n",
+      "nummer               561 non-null object\n",
+      "status               1 non-null object\n",
+      "score                561 non-null object\n",
+      "sokdata              561 non-null object\n",
+      "summary              559 non-null object\n",
+      "notisrubrik          561 non-null object\n",
+      "notis                559 non-null object\n",
+      "dokintressent        0 non-null object\n",
+      "filbilaga            520 non-null object\n",
+      "avdelning            561 non-null object\n",
+      "struktur             0 non-null object\n",
+      "debattgrupp          0 non-null object\n",
+      "debattdag            0 non-null object\n",
+      "beslutsdag           0 non-null object\n",
+      "beredningsdag        0 non-null object\n",
+      "justeringsdag        0 non-null object\n",
+      "beslutad             0 non-null object\n",
+      "debattsekunder       0 non-null object\n",
+      "ardometyp            0 non-null object\n",
+      "reservationer        0 non-null object\n",
+      "debatt               0 non-null object\n",
+      "debattnamn           561 non-null object\n",
+      "dokumentnamn         561 non-null object\n",
+      "dtypes: object(57)\n",
+      "memory usage: 254.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dftot.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -90,15 +223,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Finansminister Bosse Ringholms hantering av fr...</td>\n",
-       "      <td>1900-01-01</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2002-09-11</td>\n",
-       "      <td>Finansminister Bosse Ringholms hantering av fr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>5</td>\n",
        "      <td>Näringsminister Björn Rosengrens hantering av ...</td>\n",
@@ -134,9 +258,18 @@
        "      <td>2002-07-02</td>\n",
        "      <td>Näringsministern Björn Rosengrens uttalande om...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Justitieminister Thomas Bodströms agerande i s...</td>\n",
+       "      <td>1900-01-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2002-06-11</td>\n",
+       "      <td>Justitieminister Thomas Bodströms agerande i s...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>560 rows × 6 columns</p>\n",
+       "<p>561 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -147,11 +280,11 @@
        "3      36  Begäran om granskning av regeringens och Isabe...  2020-06-12   \n",
        "4      35  Granskning av statsrådet Anna Ekströms uttalan...  2020-06-12   \n",
        "..    ...                                                ...         ...   \n",
-       "15      6  Finansminister Bosse Ringholms hantering av fr...  1900-01-01   \n",
        "16      5  Näringsminister Björn Rosengrens hantering av ...  1900-01-01   \n",
        "17      4                   Upphandlingen av Helikopter NH90  1900-01-01   \n",
        "18      3  Regeringens agerande när det gäller Hundskolan...  1900-01-01   \n",
        "19      2  Näringsministern Björn Rosengrens uttalande om...  1900-01-01   \n",
+       "0       1  Justitieminister Thomas Bodströms agerande i s...  1900-01-01   \n",
        "\n",
        "   beslutad       datum                                            summary  \n",
        "0      None  2020-06-23  MARKUS WIECHEL\\n Riksdagsledamot SD 2020-06-23...  \n",
@@ -160,16 +293,16 @@
        "3      None  2020-06-11  JESSICA ROSENCRANTZ\\n Riksdagsledamot M 2020-0...  \n",
        "4      None  2020-06-10  PATRICK RESLOW\\n Riksdagsledamot SD 2020-06-10...  \n",
        "..      ...         ...                                                ...  \n",
-       "15     None  2002-09-11  Finansminister Bosse Ringholms hantering av fr...  \n",
        "16     None  2002-09-06     Näringsminister Björn Rosengrens hantering av   \n",
        "17     None  2002-09-02                       Upphandlingen av Helikopter   \n",
        "18     None  2002-07-11  Regeringens agerande när det gäller Hundskolan i   \n",
        "19     None  2002-07-02  Näringsministern Björn Rosengrens uttalande om...  \n",
+       "0      None  2002-06-11  Justitieminister Thomas Bodströms agerande i s...  \n",
        "\n",
-       "[560 rows x 6 columns]"
+       "[561 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +428,7 @@
        "       '2008-01-25 16:38:31', '2007-12-20 16:29:16'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,13 +439,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1900-01-01             292\n",
+       "1900-01-01             293\n",
        "2018-01-30               4\n",
        "2020-06-12               4\n",
        "2017-08-10               3\n",
@@ -326,7 +459,7 @@
        "Name: publicerad, Length: 248, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -362,18 +495,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KU     559\n",
+       "KU     560\n",
        "JuU      1\n",
        "Name: organ, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -418,32 +551,32 @@
        "Ingegerd Saarinen (mp)                                      3\n",
        "Jonas Millard (SD) och Fredrik Eriksson (SD)                3\n",
        "Karin Enström (M)                                           3\n",
-       "Edward Riedl (M)                                            3\n",
+       "Allan Widman (fp)                                           3\n",
        "Ulla Andersson (V)                                          3\n",
        "JONAS JACOBSSON GJÖRTLER  (M)                               3\n",
-       "Allan Widman (fp)                                           3\n",
+       "Edward Riedl (M)                                            3\n",
        "Morgan Johansson (S)                                        3\n",
+       "Lena Ek (c)                                                 3\n",
        "Siv Holma (v)                                               3\n",
        "Jessica Polfjärd (M)                                        3\n",
        "Kerstin Lundgren (c)                                        3\n",
        "Anders Ygeman (S)                                           3\n",
-       "Lena Ek (c)                                                 3\n",
-       "Maryam Yazdanfar (s)                                        2\n",
        "Mats Odell (kd)                                             2\n",
        "Susanne Eberstein (s)                                       2\n",
-       "Ludvig Aspling   (SD)                                       2\n",
        "Matilda Ernkrans (S)                                        2\n",
-       "Thomas Östros (s)                                           2\n",
        "Åsa Romson (MP)                                             2\n",
+       "Ludvig Aspling   (SD)                                       2\n",
+       "Thomas Östros (s)                                           2\n",
+       "Maryam Yazdanfar (s)                                        2\n",
        "Mikael Damberg (S)                                          2\n",
-       "Jessica Rosencrantz (M)                                     2\n",
+       "MATTIAS KARLSSON I LULEÅ  (M)                               2\n",
        "Ulla Hoffmann (v), Rolf Olsson (v) och Alice Åström (v)     2\n",
        "Eva-Lena Jansson (S)                                        2\n",
        "Cecilia Magnusson (M)                                       2\n",
        "Name: undertitel, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,6 +584,13 @@
    "source": [
     "dftot.undertitel.value_counts()[1:50]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
