--- a/Digitaltmuseum.ipynb
+++ b/Digitaltmuseum.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "## Digitaltmuseum \n",
-    "* [API](https://github.com/nasjonalmuseet/DiMu-API-documentation)"
+    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Digitaltmuseum.ipynb)\n",
+    "* [API](https://github.com/nasjonalmuseet/DiMu-API-documentation) \n",
+    "* Blogpost om [kulturnav](https://minancestry.blogspot.com/2020/06/draft-kulturnav.html)"
    ]
   },
   {
@@ -17,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************"
+      "******************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************"
      ]
     }
    ],
