--- a/Digitaltmuseum.ipynb
+++ b/Digitaltmuseum.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "******************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************"
+      "**************************"
      ]
     }
    ],
@@ -34,38 +34,21 @@
     "for i in range(1,5712391,10):\n",
     "#for i in range(1,571,10):\n",
     "    url = urlbase + str(i)\n",
-    "    if ((i-1) % 100) == 0:\n",
+    "    if ((i-1) % 100000) == 0:\n",
     "       print('*', end='', flush=True)\n",
     "    r = http.request('GET', url)\n",
     "    try:\n",
     "        data = json.loads(r.data)\n",
     "        dftot = dftot.append(pd.DataFrame(data[\"response\"][\"docs\"]),sort=False)\n",
     "    except:\n",
-    "        print(\"\\tError in i=\",i) \n",
-    "dftot.head()"
+    "        print(\"\\tError in i=\",i) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Photograph      465\n",
-       "Thing            98\n",
-       "Fineart           4\n",
-       "Artdesign         2\n",
-       "Architecture      1\n",
-       "Name: artifact.type, dtype: int64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dftot[\"artifact.type\"].value_counts()"
    ]
@@ -190,7 +173,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline  \n",
+    "import matplotlib.pyplot as plt \n",
+    "license = dftot[\"artifact.ingress.license\"].value_counts()\n",
+    "\n",
+    "license.plot( kind = 'pie') \n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
