--- a/Riksdagens dokument KU-anmälningar.ipynb
+++ b/Riksdagens dokument KU-anmälningar.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20KU-anm%C3%A4lningar.ipynb) \n",
     "  * [SFS](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20SFS.ipynb)\n",
-    "  * [Motioner]()\n",
+    "  * [Motioner](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20Motioner.ipynb) \n",
+    "  * [Ledamöter](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter.ipynb)\n",
+    "\n",
     "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)  561 träffar\n",
     "* [Dokumenttyper](http://data.riksdagen.se/sv/koder/?typ=doktyp&utformat=json)\n",
     "\n",
