--- a/Riksdagens dokument Motioner.ipynb
+++ b/Riksdagens dokument Motioner.ipynb
@@ -9,6 +9,7 @@
     "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20Motioner.ipynb) \n",
     "  * [SFS](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20SFS.ipynb)\n",
     "  * [KU anmälningar](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20KU-anm%C3%A4lningar.ipynb)\n",
+    "  * [Ledamöter](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledamöter.ipynb)\n",
     "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)  --> 236258 Motioner\n",
     "* [Dokumenttyper](http://data.riksdagen.se/sv/koder/?typ=doktyp&utformat=json)\n",
     "\n",
