--- a/Riksdagens dokument SFS.ipynb
+++ b/Riksdagens dokument SFS.ipynb
@@ -7,7 +7,9 @@
     "## Test Riksdagen SFS dokument \n",
     "\n",
     "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20SFS.ipynb)  \n",
-    " * [KU anmälningar](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20KU-anm%C3%A4lningar.ipynb)\n",
+    " * [KU anmälningar](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20KU-anm%C3%A4lningar.ipynb) \n",
+    " * [Motioner](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20Motioner.ipynb)\n",
+    " * [Ledamöter](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter.ipynb)\n",
     "\n",
     "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)   \n",
     "* [Dokumenttyper](http://data.riksdagen.se/sv/koder/?typ=doktyp&utformat=json)\n",
