--- a/Riksdagens dokument SFS.ipynb
+++ b/Riksdagens dokument SFS.ipynb
@@ -10,9 +10,8 @@
     " * [KU anmälningar](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20KU-anm%C3%A4lningar.ipynb) \n",
     " * [Motioner](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20Motioner.ipynb)\n",
     " * [Ledamöter](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter.ipynb)\n",
-    "\n",
+    " * [Dokumenttyper](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokumenttyper.ipynb)\n",
     "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)   \n",
-    "* [Dokumenttyper](http://data.riksdagen.se/sv/koder/?typ=doktyp&utformat=json)\n",
     "\n",
     "* 10480 hämtade verkar som det är 18 till [Dokument & lagar (10 498 träffar)](https://www.riksdagen.se/sv/dokument-lagar/?doktyp=sfs) \n",
     "\n",
