--- a/Riksdagens dokument KU-anmälningar.ipynb
+++ b/Riksdagens dokument KU-anmälningar.ipynb
@@ -10,9 +10,8 @@
     "  * [SFS](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20SFS.ipynb)\n",
     "  * [Motioner](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokument%20Motioner.ipynb) \n",
     "  * [Ledamöter](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledam%C3%B6ter.ipynb)\n",
-    "\n",
+    "  * [Dokumenttyper](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20dokumenttyper.ipynb)\n",
     "* [Skapa sökfråga](http://data.riksdagen.se/dokumentlista/)  561 träffar\n",
-    "* [Dokumenttyper](http://data.riksdagen.se/sv/koder/?typ=doktyp&utformat=json)\n",
     "\n",
     "* Wikipedia [WikiProject_Sweden/Swedish_Riksdag_documents](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Swedish_Riksdag_documents)\n"
    ]
